--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [URL]
-GameName=SPACEGAME
+GameName=MASTEROIDSCLONE
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
@@ -200,4 +200,5 @@ IconPortalPath=(Path="")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 TargetSDKVersion=31
+
 
